--- a/GGFullscreenImageViewController/en.lproj/MainStoryboard.storyboard
+++ b/GGFullscreenImageViewController/en.lproj/MainStoryboard.storyboard
@@ -1,44 +1,52 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
+        <deployment defaultVersion="1552" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="P1h-G9-k3S"/>
+                        <viewControllerLayoutGuide type="bottom" id="CqF-XU-bUu"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="96e-MC-duG">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="sRa-b7-umX">
-                                    <size key="itemSize" width="150" height="85"/>
+                                    <size key="itemSize" width="150" height="150"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CellIdentifier" id="6Dl-Bj-hfW">
-                                        <rect key="frame" x="0.0" y="0.0" width="150" height="85"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="150" height="85"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="okc.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="5Zt-ws-DC5"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" image="okc.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="5Zt-ws-DC5">
+                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                                </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <constraints>
-                                            <constraint firstItem="5Zt-ws-DC5" firstAttribute="trailing" secondItem="6Dl-Bj-hfW" secondAttribute="trailing" type="default" id="0Y6-Ur-XHr"/>
-                                            <constraint firstItem="5Zt-ws-DC5" firstAttribute="leading" secondItem="6Dl-Bj-hfW" secondAttribute="leading" type="default" id="Jww-9V-GGb"/>
-                                            <constraint firstItem="5Zt-ws-DC5" firstAttribute="top" secondItem="6Dl-Bj-hfW" secondAttribute="top" type="default" id="X50-Vm-QNE"/>
-                                            <constraint firstItem="5Zt-ws-DC5" firstAttribute="bottom" secondItem="6Dl-Bj-hfW" secondAttribute="bottom" type="default" id="izd-Ih-4zg"/>
+                                            <constraint firstItem="5Zt-ws-DC5" firstAttribute="trailing" secondItem="6Dl-Bj-hfW" secondAttribute="trailing" id="0Y6-Ur-XHr"/>
+                                            <constraint firstItem="5Zt-ws-DC5" firstAttribute="leading" secondItem="6Dl-Bj-hfW" secondAttribute="leading" id="Jww-9V-GGb"/>
+                                            <constraint firstItem="5Zt-ws-DC5" firstAttribute="top" secondItem="6Dl-Bj-hfW" secondAttribute="top" id="X50-Vm-QNE"/>
+                                            <constraint firstItem="5Zt-ws-DC5" firstAttribute="bottom" secondItem="6Dl-Bj-hfW" secondAttribute="bottom" id="izd-Ih-4zg"/>
                                         </constraints>
-                                        <size key="customSize" width="150" height="85"/>
+                                        <size key="customSize" width="150" height="150"/>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
@@ -49,17 +57,17 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="96e-MC-duG" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="JKD-1m-LxJ"/>
-                            <constraint firstItem="96e-MC-duG" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="U0x-BW-k8L"/>
-                            <constraint firstItem="96e-MC-duG" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="atM-tv-JIB"/>
-                            <constraint firstItem="96e-MC-duG" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="v7R-KC-kTy"/>
+                            <constraint firstItem="96e-MC-duG" firstAttribute="leading" secondItem="3" secondAttribute="leading" id="JKD-1m-LxJ"/>
+                            <constraint firstItem="96e-MC-duG" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" id="U0x-BW-k8L"/>
+                            <constraint firstItem="96e-MC-duG" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" id="atM-tv-JIB"/>
+                            <constraint firstItem="96e-MC-duG" firstAttribute="top" secondItem="3" secondAttribute="top" id="v7R-KC-kTy"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="IMk-Rg-TDO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="655" y="366"/>
+            <point key="canvasLocation" x="80" y="136"/>
         </scene>
     </scenes>
     <resources>
